2017-02-19: Knowte 1.1 Build 474 (Preview)
------------------------------------------

- [Added] Window borders are more visible when Windows doesn't display a drop shadow
- [Added] Simplified Chinese translation
- [Added] Russian translation
- [Added] Portuguese translation
- [Added] Polish translation
- [Changed] Knowte is now Open Source Software! The source code is available here: https://github.com/digimezzo/Knowte
- [Changed] Dark parts of the windows are now transparent and blurred on Windows 10
- [Changed] Toolbar text is more visible
- [Fixed] Issue where notes could appear on a disconnected monitor
- [Fixed] Multiple crashes


2016-07-01: Knowte 1.0 Build 460 (Release)
------------------------------------------

First release of Knowte. Features:

- Write notes and group them in notebooks
- Search for notes containing specific text
- Font styling (bold, italic, underine, strike through)
- Text highlighting
- Bulleted lists 
- Custom user interface colors
- Export notes to .rtf (Rich Text File)
- Export notes to .knowte (allows you to share your notes with other Knowte users)
- Print notes
- Link notes to other notes (WIKI style)
- Click a URL in a note to open your default web browser
- Click an e-mail address in a note to open your default e-mail client
- Pin important notes to a Windows Taskbar Jump List
- Undo and redo