@@ -2,11 +2,11 @@
 
 [assembly: AssemblyCompany("Digimezzo")]
 [assembly: AssemblyCopyright("Copyright Digimezzo © 2013 - 2017")]
-[assembly: AssemblyVersion("1.1.0.474")]
-[assembly: AssemblyFileVersion("1.1.0.474")]
+[assembly: AssemblyVersion("1.1.0.475")]
+[assembly: AssemblyFileVersion("1.1.0.475")]
 
 #if DEBUG
-[assembly: AssemblyInformationalVersion("1.1.0.474 Preview")]
+[assembly: AssemblyInformationalVersion("1.1.0.475 Preview")]
 #else
-[assembly: AssemblyInformationalVersion("1.1.0.474")]
+[assembly: AssemblyInformationalVersion("1.1.0.475")]
 #endif
